[HB] Fix buffer sizing issue with mingw gcc

Bit field packing is a delicate field.  Issue reported in comment 3 here:
http://bugzilla.gnome.org/show_bug.cgi?id=591511